<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".login.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="120dp"
            android:background="@drawable/playstoreicon" />

        <TextView
            android:id="@+id/title_kita_teman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_centerInParent="true"
            android:alpha="0"
            android:text="@string/hai_selamat_datang"
            android:textColor="@color/Brown"
            android:textSize="23dp"
            android:textStyle="bold"
            tools:alpha="100" />

        <TextView
            android:id="@+id/title_kita_aplikasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_kita_teman"
            android:layout_centerInParent="true"
            android:alpha="0"
            android:text="@string/di_aplikasi_cerita_kita_teman"
            android:textColor="@color/Brown"
            android:textSize="15dp"
            android:textStyle="bold"
            tools:alpha="100" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_kita_aplikasi"
            android:layout_centerInParent="true"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="80dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="20dp"
            android:alpha="0"
            android:hint="@string/masuk_email"
            tools:alpha="100">

            <com.example.kitateman.itemUi.InputEmail
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:ems="10"
                android:paddingLeft="10dp"
                android:inputType="textEmailAddress"
                android:textColor="@color/Brown"
                tools:ignore="SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ed_login_email"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:alpha="0"
            android:hint="@string/masuk_password"
            app:endIconMode="password_toggle"
            tools:alpha="100">

            <com.example.kitateman.itemUi.InputPassword
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:paddingLeft="10dp"
                android:ems="10"
                android:inputType="textPassword"
                android:textColor="@color/Brown"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.example.kitateman.itemUi.OneButton
            android:id="@+id/my_button_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ed_login_password"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="20dp"
            android:alpha="0"
            android:enabled="false"
            tools:alpha="100" />

        <TextView
            android:id="@+id/title_To_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/my_button_main"
            android:layout_centerInParent="true"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="50dp"
            android:text="@string/TidakPunyaAkun_text"
            android:textColor="@color/Brown"
            android:textSize="15dp"
            android:textStyle="bold" />

    </RelativeLayout>

</ScrollView>
