<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".login.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.example.kitateman.itemUi.OneButtonBack
            android:id="@+id/button_back_to_login"
            android:layout_width="50dp"
            android:layout_height="50dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="120dp"
            android:background="@drawable/playstoreicon" />

        <TextView
            android:id="@+id/title_kita_teman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_centerInParent="true"
            android:text="@string/daftar_akun_dulu_ya"
            android:textColor="@color/Brown"
            android:textSize="23sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/title_kita_aplikasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_kita_teman"
            android:layout_centerInParent="true"
            android:text="@string/untuk_akses_aplikasi_cerita_kita_teman"
            android:textColor="@color/Brown"
            android:textSize="15sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_register_name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/title_kita_aplikasi"
            android:layout_centerInParent="true"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="80dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/masuk_nama">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameEditTextRegis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:textColor="@color/Brown" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ed_register_name"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/masuk_email">

            <com.example.kitateman.itemUi.InputEmail
                android:id="@+id/emailEditTextRegis"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:paddingStart="10dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textColor="@color/Brown" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ed_register_email"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:hint="@string/masuk_password"
            app:endIconMode="password_toggle">

            <com.example.kitateman.itemUi.InputPassword
                android:id="@+id/passwordEditTextRegis"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:paddingStart="10dp"
                android:ems="10"
                android:inputType="textPassword"
                android:textColor="@color/Brown" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.example.kitateman.itemUi.OneButtonRegister
            android:id="@+id/my_button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ed_register_password"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="50dp"
            android:enabled="false" />

    </RelativeLayout>

</ScrollView>
